# nuflux

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  a.out  configure  meson.build  meson_options.txt  pyproject.toml  setup.py
.github/workflows/: report.yml  tests.yml  wheels.yml
cmake/: NufluxConfig.cmake.in  cmake_uninstall.cmake.in  set_installed_flag.cmake
contrib/: manylinux2014.Dockerfile  ubuntu.Dockerfile
docs/: Doxyfile.in  about.rst  conf.py  conf.py.in  cppapi.rst  development.rst  docs-upload.sh  evaluation.rst  fluxes.rst  index.rst  installation.rst  interpolation.rst  meson.build  methods.rst  models.rst  overview.rst  pythonapi.rst  usage.rst
include/nuflux/: LegacyConventionalFlux.h  SplineFlux.h  nuflux.h  version.h.in
nuflux/: __init__.py
nuflux/data/: BERSS_H3a_central_numubar.fits  BERSS_H3p_upper_nue.fits  honda2012_spl_solmin.d  honda_3d_spl.fits
nuflux/data/ANFlux/: CORSIKA_GaisserH3a_average_numu.fits
nuflux/data/LEFlux/: honda2012_spl_solmin_nue.fits  honda2012_spl_solmin_nuebar.fits  honda2012_spl_solmin_numu.fits  honda2012_spl_solmin_numubar.fits
nuflux/data/LegacyConventionalFlux/: honda2006_sno_solmin-aa.d  honda2006_sno_solmin.d
nuflux/data/NewSplineFlux/: H3a_SIBYLL21_conv_nue.fits  H3a_SIBYLL21_k_nue.fits  H3a_SIBYLL21_k_nuebar.fits  H3a_SIBYLL21_k_numubar.fits  H3a_SIBYLL21_nue.fits  H3a_SIBYLL21_nuebar.fits  H3a_SIBYLL21_numu.fits  H3a_SIBYLL21_numubar.fits  H3a_SIBYLL21_pi_nue.fits  H3a_SIBYLL21_pi_nuebar.fits  H3a_SIBYLL21_pi_numu.fits  H3a_SIBYLL21_pi_numubar.fits  H3a_SIBYLL21_prompt_nuebar.fits  H3a_SIBYLL21_total_nuebar.fits  H3a_SIBYLL21_total_numu.fits  H3a_SIBYLL21_total_numubar.fits  H3a_SIBYLL23C_conv_nue.fits  H3a_SIBYLL23C_conv_numu.fits  H3a_SIBYLL23C_k_nuebar.fits  H3a_SIBYLL23C_k_numubar.fits  H3a_SIBYLL23C_nue.fits  H3a_SIBYLL23C_numubar.fits  H3a_SIBYLL23C_nutau.fits  H3a_SIBYLL23C_pi_nuebar.fits  H3a_SIBYLL23C_pi_numu.fits  H3a_SIBYLL23C_pi_numubar.fits  H3a_SIBYLL23C_prompt_nue.fits  H3a_SIBYLL23C_prompt_numu.fits  H3a_SIBYLL23C_total_nuebar.fits  H3a_SIBYLL23C_total_numubar.fits
nuflux/data/SplineFlux/: BERSS_H3a_central_nuebar.fits  BERSS_H3p_central_numu.fits  BERSS_H3p_lower_nue.fits
nuflux/data/SplineFlux2/: H3a_SIBYLL21_K0L_numubar.fits  H3a_SIBYLL21_K0_nue.fits  H3a_SIBYLL21_K0_nuebar.fits  H3a_SIBYLL21_K0_numu.fits  H3a_SIBYLL21_K0_numubar.fits  H3a_SIBYLL21_conv_nue.fits  H3a_SIBYLL21_conv_nuebar.fits  H3a_SIBYLL21_conv_numu.fits  H3a_SIBYLL21_conv_numubar.fits  H3a_SIBYLL21_k_nuebar.fits  H3a_SIBYLL21_k_numu.fits  H3a_SIBYLL21_k_numubar.fits  H3a_SIBYLL21_mu_nue.fits  H3a_SIBYLL21_mu_nuebar.fits  H3a_SIBYLL21_mu_numu.fits  H3a_SIBYLL21_mu_numubar.fits  H3a_SIBYLL21_numubar.fits  H3a_SIBYLL21_prompt_nue.fits  H3a_SIBYLL21_prompt_numu.fits  H3a_SIBYLL21_prompt_numubar.fits  H3a_SIBYLL23C_K0L_numubar.fits  H3a_SIBYLL23C_K0_nue.fits  H3a_SIBYLL23C_K0_nuebar.fits  H3a_SIBYLL23C_K0_numu.fits  H3a_SIBYLL23C_K0_numubar.fits  H3a_SIBYLL23C_conv_nue.fits  H3a_SIBYLL23C_conv_nuebar.fits  H3a_SIBYLL23C_conv_numu.fits  H3a_SIBYLL23C_conv_numubar.fits  H3a_SIBYLL23C_k_nue.fits  H3a_SIBYLL23C_k_numu.fits  H3a_SIBYLL23C_k_numubar.fits  H3a_SIBYLL23C_mu_nue.fits  H3a_SIBYLL23C_mu_nuebar.fits  H3a_SIBYLL23C_mu_numu.fits  H3a_SIBYLL23C_mu_numubar.fits  H3a_SIBYLL23C_nue.fits  H3a_SIBYLL23C_nuebar.fits  H3a_SIBYLL23C_numu.fits  H3a_SIBYLL23C_nutau.fits  (+18 more)
resources/data/ANFlux/: CORSIKA_GaisserH3a_SIBYLL-2.1_nue.fits  CORSIKA_GaisserH3a_average_nue.fits
resources/data/SplineFlux/: BERSS_H3p_lower.fits
resources/data/SplineFlux2/: H3a_SIBYLL21_K0S_nue.fits  H3a_SIBYLL21_K0S_nuebar.fits  H3a_SIBYLL21_conv_nuebar.fits  H3a_SIBYLL21_k_nue.fits  H3a_SIBYLL21_k_numu.fits  H3a_SIBYLL21_pi_nue.fits  H3a_SIBYLL21_pi_numu.fits  H3a_SIBYLL21_pi_numubar.fits  H3a_SIBYLL23C_K0L_nue.fits  H3a_SIBYLL23C_K0L_nuebar.fits  H3a_SIBYLL23C_K0S_nue.fits  H3a_SIBYLL23C_K0_nuebar.fits  H3a_SIBYLL23C_k_nuebar.fits  H3a_SIBYLL23C_k_numu.fits  H3a_SIBYLL23C_mu_nuebar.fits  H3a_SIBYLL23C_mu_numu.fits  H3a_SIBYLL23C_nuebar.fits  H3a_SIBYLL23C_numubar.fits  H3a_SIBYLL23C_pi_numubar.fits  H3a_SIBYLL23C_pr_numubar.fits  H3a_SIBYLL23C_pr_nutaubar.fits
resources/scripts/create_fluxes/: create_fluxes.py
resources/scripts/create_fluxes/exampleflux/splines/: exampleflux_nue.fits
scripts/: plot_flux_models.py  plot_flux_nutypes.py
scripts/create_fluxes/: create_fluxes.py
src/: nuFlux.cpp
src/include/NewNuFlux/: FluxFunction.h  NewNuFlux.h  particleType.h
src/include/NewNuFlux/Fluxes/: ANFlux.h  Fluxes.h  IPLEFlux.h  LEFlux.h  LegacyConventionalFlux.h  LegacyPromptFlux.h  SplineFlux.h
src/include/nuflux/: ANFlux.h  FluxFunction.h  Fluxes.h  IPLEFlux.h  IPSGLEFlux.h  Interfaces.h  LEFlux.h  LegacyConventionalFlux.h  LegacyPromptFlux.h  NewNuFlux.h  NewSplineFlux.h  SplineFlux.h  SplineFlux2.h  logging.h  meson.build  nuflux.h  particleType.h
src/nuflux/: FluxFunction.cpp  IPLEFlux.cpp  LegacyConventionalFlux.cpp  LegacyPromptFlux.cpp  SplineFlux.cpp  SplineFlux2.cpp  __init__.py  detail.cpp
src/nuflux/data/: meson.build
src/nuflux/data/ANFlux/: CORSIKA_GaisserH3a_QGSJET-II_nue.fits  CORSIKA_GaisserH3a_QGSJET-II_numu.fits  CORSIKA_GaisserH3a_SIBYLL-2.1_numu.fits
src/nuflux/data/SplineFlux/: BERSS_H3p_central.fits  BERSS_H3p_upper_nue.fits
src/nuflux/data/SplineFlux2/: H3a_SIBYLL21_K0L_nue.fits  H3a_SIBYLL21_K0L_nuebar.fits  H3a_SIBYLL21_K0L_numu.fits  H3a_SIBYLL21_mu_nue.fits  H3a_SIBYLL21_pi_nuebar.fits  H3a_SIBYLL23C_K0S_nuebar.fits  H3a_SIBYLL23C_K0_numu.fits  H3a_SIBYLL23C_conv_numubar.fits  H3a_SIBYLL23C_mu_numubar.fits  H3a_SIBYLL23C_numu.fits  H3a_SIBYLL23C_pi_nue.fits  H3a_SIBYLL23C_pr_nuebar.fits  H3a_SIBYLL23C_pr_numu.fits
src/pybindings/: __init__.py  detail.cxx  meson.build  module.cxx
tests/: meson.build  pion_contrib.json  test_basic.cxx  test_data.json  test_data.py  test_data_splines.json  test_fluxes.py  test_inline_readme.sh
