[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'oldest-supported-numpy']

[project]
name = "nuflux"
version = "2.0.4"
description = "A library for calculating atmospheric neutrino fluxes"
readme = "README.md"
requires-python = "~=3.7"
dependencies = ['numpy']
license = {file = "LICENSE"}
keywords = ["python", "science", "astronomy", "astrophysics", "IceCube", "atmospheric", "neutrino"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    ]

[project.urls]
Documentation = "https://docs.icecube.aq/nuflux/main/"
Source = "https://github.com/icecube/nuflux"
Collaboration = "https://icecube.wisc.edu/"
doi = "https://doi.org/10.5281/zenodo.8180337"

[project.optional-dependencies]
test = ["pytest","pytest-subtests"]

[tool.meson-python.args]
setup = ['-Dpymodule=true']

[tool.pytest.ini_options]
addopts = "--doctest-glob='README.md'"
testpaths = ["tests", "README.md"]
