[build-system]
requires = ["scikit-build-core>=0.5", "numpy>=2.0", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "nuflux"
dynamic = ["version"]
description = "A library for calculating atmospheric neutrino fluxes"
readme = "README.md"
requires-python = "~=3.7"
dependencies = ["numpy>=2.0"]
license = {file = "LICENSE"}
keywords = ["python", "science", "astronomy", "astrophysics", "IceCube", "atmospheric", "neutrino"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    ]

[project.urls]
Documentation = "https://docs.icecube.aq/nuflux/main/"
Source = "https://github.com/icecube/nuflux"
Collaboration = "https://icecube.wisc.edu/"
doi = "https://doi.org/10.5281/zenodo.8180337"

[project.optional-dependencies]
test = ["pytest"]
dev = []

[tool.scikit-build]
cmake.args = ["-DPYTHON_ONLY=ON"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
# no settings required

[tool.pytest.ini_options]
addopts = "--doctest-glob='README.md'"
testpaths = ["tests", "README.md"]

[tool.cibuildwheel]
build = "cp3{7,8,9,10,11,12}-manylinux_x86_64"
manylinux-x86_64-image = "kjmeagher/nuflux-manylinux2014_x86_64"
test-extras = ["test"]
test-command = "{project}/tests/test_fluxes.py"

[tool.codespell]
skip = '*.pdf,*.dat,*.fits'
ignore-words-list = 'nd'

[tool.doc8]
max-line-length=128
