data_files = {
  'ANFlux':files(
    'ANFlux/CORSIKA_GaisserH3a_QGSJET-II_nue.fits',
    'ANFlux/CORSIKA_GaisserH3a_QGSJET-II_numu.fits',
    'ANFlux/CORSIKA_GaisserH3a_SIBYLL-2.1_nue.fits',
    'ANFlux/CORSIKA_GaisserH3a_SIBYLL-2.1_numu.fits',
    'ANFlux/CORSIKA_GaisserH3a_average_nue.fits',
    'ANFlux/CORSIKA_GaisserH3a_average_numu.fits',
  ),
  'IPLEFlux': files(
    'IPLEFlux/IPhonda2006_sno_solmin_nbe2D.dat',
    'IPLEFlux/IPhonda2006_sno_solmin_nbe3D.dat',
    'IPLEFlux/IPhonda2006_sno_solmin_nbm2D.dat',
    'IPLEFlux/IPhonda2006_sno_solmin_nbm3D.dat',
    'IPLEFlux/IPhonda2006_sno_solmin_nue2D.dat',
    'IPLEFlux/IPhonda2006_sno_solmin_nue3D.dat',
    'IPLEFlux/IPhonda2006_sno_solmin_num2D.dat',
    'IPLEFlux/IPhonda2006_sno_solmin_num3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_nbe2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_nbe3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_nbm2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_nbm3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_nue2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_nue3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_num2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmax_num3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_nbe2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_nbe3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_nbm2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_nbm3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_nue2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_nue3D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_num2D.dat',
    'IPLEFlux/IPhonda2014_sk_solmin_num3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_nbe2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_nbe3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_nbm2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_nbm3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_nue2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_nue3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_num2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmax_num3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_nbe2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_nbe3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_nbm2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_nbm3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_nue2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_nue3D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_num2D.dat',
    'IPLEFlux/IPhonda2014_spl_solmin_num3D.dat',
  ),
  'LegacyConventionalFlux':files(
    'LegacyConventionalFlux/bartol_nue.dat',
    'LegacyConventionalFlux/bartol_nuebar.dat',
    'LegacyConventionalFlux/bartol_numu.dat',
    'LegacyConventionalFlux/bartol_numubar.dat',
    'LegacyConventionalFlux/honda2006_gaisserH3a_elbert.dat',
    'LegacyConventionalFlux/honda2006_gaisserH4a_elbert.dat',
    'LegacyConventionalFlux/honda2006_gst13_elbert.dat',
    'LegacyConventionalFlux/honda2006_gst13star_elbert.dat',
    'LegacyConventionalFlux/honda2006_nue.dat',
    'LegacyConventionalFlux/honda2006_nuebar.dat',
    'LegacyConventionalFlux/honda2006_numu.dat',
    'LegacyConventionalFlux/honda2006_numubar.dat',
    'LegacyConventionalFlux/honda2006_polygonato_mod_elbert.dat',
  ),
  'LegacyPromptFlux': files(
    'LegacyPromptFlux/sarcevic_max_gaisserH3a_elbert.dat',
    'LegacyPromptFlux/sarcevic_max_gaisserH4a_elbert.dat',
    'LegacyPromptFlux/sarcevic_max_nuebarpro.dat',
    'LegacyPromptFlux/sarcevic_max_nuepro.dat',
    'LegacyPromptFlux/sarcevic_max_numubarpro.dat',
    'LegacyPromptFlux/sarcevic_max_numupro.dat',
    'LegacyPromptFlux/sarcevic_max_polygonato_mod_elbert.dat',
    'LegacyPromptFlux/sarcevic_min_gaisserH3a_elbert.dat',
    'LegacyPromptFlux/sarcevic_min_gaisserH4a_elbert.dat',
    'LegacyPromptFlux/sarcevic_min_nuebarpro.dat',
    'LegacyPromptFlux/sarcevic_min_nuepro.dat',
    'LegacyPromptFlux/sarcevic_min_numubarpro.dat',
    'LegacyPromptFlux/sarcevic_min_numupro.dat',
    'LegacyPromptFlux/sarcevic_min_polygonato_mod_elbert.dat',
    'LegacyPromptFlux/sarcevic_std_gaisserH3a_elbert.dat',
    'LegacyPromptFlux/sarcevic_std_gaisserH4a_elbert.dat',
    'LegacyPromptFlux/sarcevic_std_nuebarpro.dat',
    'LegacyPromptFlux/sarcevic_std_nuepro.dat',
    'LegacyPromptFlux/sarcevic_std_numubarpro.dat',
    'LegacyPromptFlux/sarcevic_std_numupro.dat',
    'LegacyPromptFlux/sarcevic_std_polygonato_mod_elbert.dat',
  ),
  'SplineFlux':files(
    'SplineFlux/BERSS_H3a_central.fits',
    'SplineFlux/BERSS_H3p_central.fits',
    'SplineFlux/BERSS_H3p_lower.fits',
    'SplineFlux/BERSS_H3p_upper.fits',
  ),
  'SplineFlux2':files(
    'SplineFlux2/H3a_SIBYLL21_K0L_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_K0L_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_K0L_numu.fits',
    'SplineFlux2/H3a_SIBYLL21_K0L_numubar.fits',
    'SplineFlux2/H3a_SIBYLL21_K0S_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_K0S_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_K0_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_K0_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_K0_numu.fits',
    'SplineFlux2/H3a_SIBYLL21_K0_numubar.fits',
    'SplineFlux2/H3a_SIBYLL21_conv_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_conv_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_conv_numu.fits',
    'SplineFlux2/H3a_SIBYLL21_conv_numubar.fits',
    'SplineFlux2/H3a_SIBYLL21_k_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_k_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_k_numu.fits',
    'SplineFlux2/H3a_SIBYLL21_k_numubar.fits',
    'SplineFlux2/H3a_SIBYLL21_mu_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_mu_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_mu_numu.fits',
    'SplineFlux2/H3a_SIBYLL21_mu_numubar.fits',
    'SplineFlux2/H3a_SIBYLL21_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_numu.fits',
    'SplineFlux2/H3a_SIBYLL21_numubar.fits',
    'SplineFlux2/H3a_SIBYLL21_pi_nue.fits',
    'SplineFlux2/H3a_SIBYLL21_pi_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL21_pi_numu.fits',
    'SplineFlux2/H3a_SIBYLL21_pi_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0L_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0L_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0L_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0L_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0S_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0S_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_K0_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_conv_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_conv_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_conv_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_conv_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_k_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_k_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_k_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_k_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_mu_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_mu_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_mu_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_mu_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_nutau.fits',
    'SplineFlux2/H3a_SIBYLL23C_nutaubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_pi_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_pi_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_pi_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_pi_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_pr_nue.fits',
    'SplineFlux2/H3a_SIBYLL23C_pr_nuebar.fits',
    'SplineFlux2/H3a_SIBYLL23C_pr_numu.fits',
    'SplineFlux2/H3a_SIBYLL23C_pr_numubar.fits',
    'SplineFlux2/H3a_SIBYLL23C_pr_nutau.fits',
    'SplineFlux2/H3a_SIBYLL23C_pr_nutaubar.fits',
  )
}

if not get_option('pymodule')
  test_env = {'NUFLUX_DATA': meson.current_source_dir()}
  if get_option('install_data')
    foreach d, f: data_files
      install_subdir(d, install_dir:datadir)
    endforeach
  endif
else
  test_env = {}
  foreach d, f: data_files
    python.install_sources(f, subdir: 'nuflux/data/' + d)
  endforeach
endif
